# Blockrunnooor

./: .env.example  .gitignore  README.md  ecosystem.config.cjs  package-lock.json  package.json  pyproject.toml  review-optimization-plan.md  tsconfig.json
blockrunnooor/: config.py  logging.py  models.py  prompt_bank.py  wallet_store.py
blockrunnooor/executor/: main.py
blockrunnooor/notion/: client.py  recorder.py  runs.py
blockrunnooor/orchestrator/: main.py  service.py
blockrunnooor/router/: blockrun.py  decision.py
blockrunnooor/scheduler/: utils.py
blockrunnooor/state/: db.py
blockrunnooor/tools/: generate_wallets.py
deploy/systemd/: blockrunnooor-root.service  blockrunnooor.env.example  blockrunnooor.service
docs/: 00-overview.md  01-architecture.md  02-security.md  03-scheduling.md  04-routing.md  05-notion-schema.md  06-deployment-pm2.md  06-deployment-systemd.md  07-ops-faq.md  08-operations-manual.md  09-multi-account.md  10-config-reference.md  11-sqlite-migrations.md
src/: index.ts  logging.ts  prompt-bank.ts  types.ts  wallet-manifest.ts
src/clients/: blockrun.ts  notion.ts
src/config/: accounts.ts  env.ts
src/notion/: recorder.ts  runs.ts
src/orchestrator/: orchestrator.ts
src/router/: decision.ts
src/state/: db.ts  migrations.ts  repo.ts
src/tools/: generate-wallets.ts
src/util/: jsonl.ts  ref.ts  semaphore.ts  time.ts
tests/: test_decision.py  test_notion_payload.py  test_prompt_bank.py  test_scheduler_utils.py  test_wallet_store.py
