[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockrunnooor"
version = "0.1.0"
description = "VPS orchestrator + one-shot executor for BlockRun jobs with Notion run recording"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
blockrunnooor-orchestrator = "blockrunnooor.orchestrator.main:main"
blockrunnooor-executor = "blockrunnooor.executor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blockrunnooor*"]
